Replace rss-parser with feedparser which seems to handle malformed XML better

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   },
   "dependencies": {
     "dotenv": "^6.0.0",
+    "feedparser": "^2.2.9",
     "got": "^9.1.0",
     "lodash": "^4.17.10",
     "node-opml-parser": "^1.0.0",
-    "rss-parser": "^3.4.3",
     "sequelize": "^4.38.0",
     "sequelize-cli": "^4.1.1",
     "sqlite3": "^4.0.2"
